--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-query": "^3.39.3",
