--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
+    "node-forge": "^1.3.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
