--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@mui/x-data-grid": "^8.0.0-beta.3",
     "axios": "^1.7.9",
     "chart.js": "^4.4.8",
     "crypto-js": "^4.2.0",
